# traffik-mlpipeline

./: .dockerignore  .env.example  .gitignore  DEVELOPER.md  Dockerfile  README.md  STAGE_1_HANDOFF.md  STAGE_2_HANDOFF.md  STAGE_3_HANDOFF.md  api.py  deploy.sh  freshness_check.py  metrics_logger.py  mlflow_utils.py  model_backup.py  pyproject.toml  slack_alert.py  supervisord.conf
.github/workflows/: deploy.yml
docs/: index.html
infra/: poller.sh
infra/azure-function/: function_app.py
model/: config.json  metrics.json
transit/: __init__.py  data_sources.py  features.py  ml.py  pipeline.py  retrain.py
